--- a/css/mobile.css
+++ b/css/mobile.css
@@ -250,7 +250,8 @@
 }
 
 .nav-top .open-nav-btn i {
-    font-size: x-large;
+    font-size: 2.5rem;
+    margin-right: 1rem;
 }
 
 .nav-bar .nav-mid .nav-mid-child h5 {
